refactor payment component and payment half complete

--- a/client/c2c-app/src/index.html
+++ b/client/c2c-app/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
+  <script src="https://www.paypal.com/sdk/js?client-id=AV4c5T7X6mPKl3EnbrEO0R7VzeB0iMOclT3a4nJFs1uRDuw4B1Z9ZYK_ivrgTs0gRB5J5f_P5yEeFiyh"></script>
 </head>
 <body>
   <app-root></app-root>
