--- a/server/c2cdist/c2c-app/index.html
+++ b/server/c2cdist/c2c-app/index.html
@@ -9,8 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
-<link rel="stylesheet" href="styles.ba452814b7eb3287b981.css"></head>
+  <script src="https://www.paypal.com/sdk/js?client-id=AV4c5T7X6mPKl3EnbrEO0R7VzeB0iMOclT3a4nJFs1uRDuw4B1Z9ZYK_ivrgTs0gRB5J5f_P5yEeFiyh"></script>
+<link rel="stylesheet" href="styles.c05ff23c29042874da56.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.94e8d9bfe77abc162d07.js" type="module"></script><script src="runtime-es5.94e8d9bfe77abc162d07.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.c79f888253793b3b845f.js" type="module"></script><script src="main-es5.c79f888253793b3b845f.js" nomodule defer></script></body>
+<script src="runtime-es2015.94e8d9bfe77abc162d07.js" type="module"></script><script src="runtime-es5.94e8d9bfe77abc162d07.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.e58ec2928a708c9c5a00.js" type="module"></script><script src="main-es5.e58ec2928a708c9c5a00.js" nomodule defer></script></body>
 </html>
