firebase and fcm. apparently firebase dont support node js

--- a/server/c2cdist/c2c-app/index.html
+++ b/server/c2cdist/c2c-app/index.html
@@ -12,6 +12,27 @@
   <script src="https://www.paypal.com/sdk/js?client-id=AV4c5T7X6mPKl3EnbrEO0R7VzeB0iMOclT3a4nJFs1uRDuw4B1Z9ZYK_ivrgTs0gRB5J5f_P5yEeFiyh"></script>
 <link rel="stylesheet" href="styles.6b1f50bb62f0bd24cf8f.css"></head>
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBqZ5F9WFJeRM5ezMQbIpj17id6snPeBIQ",
+    authDomain: "c2capp-1a798.firebaseapp.com",
+    databaseURL: "https://c2capp-1a798.firebaseio.com",
+    projectId: "c2capp-1a798",
+    storageBucket: "c2capp-1a798.appspot.com",
+    messagingSenderId: "474218226931",
+    appId: "1:474218226931:web:3923c2d2d314ba06430386"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
   <app-root></app-root>
-<script src="runtime-es2015.d2edd37e5b398d2da8cb.js" type="module"></script><script src="runtime-es5.d2edd37e5b398d2da8cb.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.671f6d29eab00faafb0d.js" type="module"></script><script src="main-es5.671f6d29eab00faafb0d.js" nomodule defer></script></body>
+<script src="runtime-es2015.d2edd37e5b398d2da8cb.js" type="module"></script><script src="runtime-es5.d2edd37e5b398d2da8cb.js" nomodule defer></script><script src="polyfills-es5.7d7d156430c9cd92193e.js" nomodule defer></script><script src="polyfills-es2015.79b5019f4dff069483c4.js" type="module"></script><script src="main-es2015.ef68c05712fa0943b1cb.js" type="module"></script><script src="main-es5.ef68c05712fa0943b1cb.js" nomodule defer></script></body>
 </html>
