--- a/client/c2c-app/src/index.html
+++ b/client/c2c-app/src/index.html
@@ -12,6 +12,27 @@
   <script src="https://www.paypal.com/sdk/js?client-id=AV4c5T7X6mPKl3EnbrEO0R7VzeB0iMOclT3a4nJFs1uRDuw4B1Z9ZYK_ivrgTs0gRB5J5f_P5yEeFiyh"></script>
 </head>
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBqZ5F9WFJeRM5ezMQbIpj17id6snPeBIQ",
+    authDomain: "c2capp-1a798.firebaseapp.com",
+    databaseURL: "https://c2capp-1a798.firebaseio.com",
+    projectId: "c2capp-1a798",
+    storageBucket: "c2capp-1a798.appspot.com",
+    messagingSenderId: "474218226931",
+    appId: "1:474218226931:web:3923c2d2d314ba06430386"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
   <app-root></app-root>
 </body>
 </html>
